tests/ui/associated-type-bounds/no-gat-position.stderr
error[E0229]: associated type bindings are not allowed here
  --> $DIR/no-gat-position.rs:8:56
   |
LL |     fn next<'a>(&'a mut self) -> Option<Self::Item<'a, As1: Copy>>;
   |                                                        ^^^^^^^^^ associated type not allowed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0229`.
